--- a/api.ipynb
+++ b/api.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "4                0               0               0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -494,16 +494,16 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Total</td>\n",
-       "      <td>309621</td>\n",
-       "      <td>154403</td>\n",
-       "      <td>8893</td>\n",
-       "      <td>146303</td>\n",
-       "      <td>13/06/2020 11:38:46</td>\n",
+       "      <td>309894</td>\n",
+       "      <td>154448</td>\n",
+       "      <td>8895</td>\n",
+       "      <td>146529</td>\n",
+       "      <td>13/06/2020 13:38:46</td>\n",
        "      <td>22</td>\n",
        "      <td>TT</td>\n",
-       "      <td>26</td>\n",
-       "      <td>164</td>\n",
-       "      <td>3</td>\n",
+       "      <td>299</td>\n",
+       "      <td>209</td>\n",
+       "      <td>5</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -572,14 +572,14 @@
       ],
       "text/plain": [
        "         State  Confirmed  Recovered  Deaths  Active    Last_Updated_Time  \\\n",
-       "0        Total     309621     154403    8893  146303  13/06/2020 11:38:46   \n",
+       "0        Total     309894     154448    8895  146529  13/06/2020 13:38:46   \n",
        "1  Maharashtra     101141      47796    3717   49628  12/06/2020 20:44:48   \n",
        "2   Tamil Nadu      40698      22047     367   18284  12/06/2020 18:45:47   \n",
        "3        Delhi      36824      13398    1214   22212  12/06/2020 22:24:48   \n",
        "4      Gujarat      22562      15501    1416    5645  12/06/2020 20:15:59   \n",
        "\n",
        "   Migrated_Other State_code  Delta_Confirmed  Delta_Recovered  Delta_Deaths  \\\n",
-       "0              22         TT               26              164             3   \n",
+       "0              22         TT              299              209             5   \n",
        "1               0         MH                0                0             0   \n",
        "2               0         TN                0                0             0   \n",
        "3               0         DL                0                0             0   \n",
@@ -593,7 +593,7 @@
        "4                                                NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "4       01-Apr-20    BR          3         0          0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -862,14 +862,14 @@
        "      <td>Andhra Pradesh</td>\n",
        "      <td>AP_Foreign Evacuees</td>\n",
        "      <td>Foreign Evacuees</td>\n",
-       "      <td>199</td>\n",
-       "      <td>178</td>\n",
-       "      <td>21</td>\n",
+       "      <td>202</td>\n",
+       "      <td>180</td>\n",
+       "      <td>22</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -891,14 +891,14 @@
        "1                  Nicobars          0       0          0         0   \n",
        "2  North and Middle Andaman          1       0          1         0   \n",
        "3             South Andaman         32       0         32         0   \n",
-       "4          Foreign Evacuees        199     178         21         0   \n",
+       "4          Foreign Evacuees        202     180         22         0   \n",
        "\n",
        "   Migrated_Other  Delta_Confirmed  Delta_Active  Delta_Recovered  \\\n",
        "0             0.0                0             0                0   \n",
        "1             0.0                0             0                0   \n",
        "2             0.0                0             0                0   \n",
        "3             0.0                0             0                0   \n",
-       "4             0.0                0             0                0   \n",
+       "4             0.0                3             2                1   \n",
        "\n",
        "   Delta_Deceased District_Notes  Last_Updated  \n",
        "0               0            NaN           NaN  \n",
@@ -908,7 +908,7 @@
        "4               0            NaN           NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1101,7 @@
        "4                     69.79               11.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
        "[3 rows x 28 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,7 +1300,7 @@
     "state_wise_tests = pd.read_csv('https://api.covid19india.org/csv/latest/statewise_tested_numbers_data.csv')\n",
     "\n",
     "# save as .csv file\n",
-    "tests.to_csv('district_level_latest.csv', index=False)\n",
+    "tests.to_csv('tests_latest_state_level.csv', index=False)\n",
     "\n",
     "# first few rows\n",
     "state_wise_tests.head(3)"
