--- a/api.ipynb
+++ b/api.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "4                0               0               0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -494,15 +494,15 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Total</td>\n",
-       "      <td>309894</td>\n",
-       "      <td>154448</td>\n",
+       "      <td>310156</td>\n",
+       "      <td>154896</td>\n",
        "      <td>8895</td>\n",
-       "      <td>146529</td>\n",
-       "      <td>13/06/2020 13:38:46</td>\n",
-       "      <td>22</td>\n",
+       "      <td>146342</td>\n",
+       "      <td>13/06/2020 16:33:46</td>\n",
+       "      <td>23</td>\n",
        "      <td>TT</td>\n",
-       "      <td>299</td>\n",
-       "      <td>209</td>\n",
+       "      <td>561</td>\n",
+       "      <td>657</td>\n",
        "      <td>5</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -572,14 +572,14 @@
       ],
       "text/plain": [
        "         State  Confirmed  Recovered  Deaths  Active    Last_Updated_Time  \\\n",
-       "0        Total     309894     154448    8895  146529  13/06/2020 13:38:46   \n",
+       "0        Total     310156     154896    8895  146342  13/06/2020 16:33:46   \n",
        "1  Maharashtra     101141      47796    3717   49628  12/06/2020 20:44:48   \n",
        "2   Tamil Nadu      40698      22047     367   18284  12/06/2020 18:45:47   \n",
        "3        Delhi      36824      13398    1214   22212  12/06/2020 22:24:48   \n",
        "4      Gujarat      22562      15501    1416    5645  12/06/2020 20:15:59   \n",
        "\n",
        "   Migrated_Other State_code  Delta_Confirmed  Delta_Recovered  Delta_Deaths  \\\n",
-       "0              22         TT              299              209             5   \n",
+       "0              23         TT              561              657             5   \n",
        "1               0         MH                0                0             0   \n",
        "2               0         TN                0                0             0   \n",
        "3               0         DL                0                0             0   \n",
@@ -593,7 +593,7 @@
        "4                                                NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,6 +612,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -620,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -649,6 +656,7 @@
        "      <th>Confirmed</th>\n",
        "      <th>Deceased</th>\n",
        "      <th>Recovered</th>\n",
+       "      <th>State_Name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -659,6 +667,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>Andaman and Nicobar Islands</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -667,6 +676,7 @@
        "      <td>67</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>Andhra Pradesh</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -675,6 +685,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>Arunachal Pradesh</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -683,6 +694,7 @@
        "      <td>15</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>Assam</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -691,21 +703,29 @@
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>Bihar</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Status       Date State  Confirmed  Deceased  Recovered\n",
-       "0       01-Apr-20    AN          0         0          0\n",
-       "1       01-Apr-20    AP         67         0          1\n",
-       "2       01-Apr-20    AR          0         0          0\n",
-       "3       01-Apr-20    AS         15         0          0\n",
-       "4       01-Apr-20    BR          3         0          0"
+       "Status       Date State  Confirmed  Deceased  Recovered  \\\n",
+       "0       01-Apr-20    AN          0         0          0   \n",
+       "1       01-Apr-20    AP         67         0          1   \n",
+       "2       01-Apr-20    AR          0         0          0   \n",
+       "3       01-Apr-20    AS         15         0          0   \n",
+       "4       01-Apr-20    BR          3         0          0   \n",
+       "\n",
+       "Status                   State_Name  \n",
+       "0       Andaman and Nicobar Islands  \n",
+       "1                    Andhra Pradesh  \n",
+       "2                 Arunachal Pradesh  \n",
+       "3                             Assam  \n",
+       "4                             Bihar  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,9 +743,25 @@
     "state_wise_daily = state_wise_daily.pivot_table(index=['Date', 'State'], \n",
     "                                                columns=['Status'], \n",
     "                                                values='Count').reset_index()\n",
+    "\n",
+    "# map state names to state codes\n",
+    "state_codes = {code:state for code, state in zip(latest['State_code'], latest['State'])}\n",
+    "state_codes['DD'] = 'Daman and Diu'\n",
+    "state_wise_daily['State_Name'] = state_wise_daily['State'].map(state_codes)\n",
+    "\n",
+    "# save as a .csv file\n",
+    "state_wise_daily.to_csv('state_level_daily.csv')\n",
+    "\n",
     "# first few rows\n",
     "state_wise_daily.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -736,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +944,7 @@
        "4               0            NaN           NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +1023,7 @@
        "      <td>1.20%</td>\n",
        "      <td>75.64</td>\n",
        "      <td>83.33</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1003,7 +1039,7 @@
        "      <td>1.14%</td>\n",
        "      <td>81.57</td>\n",
        "      <td>87.50</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1019,7 +1055,7 @@
        "      <td>1.26%</td>\n",
        "      <td>73.96</td>\n",
        "      <td>79.26</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1035,7 +1071,7 @@
        "      <td>1.28%</td>\n",
        "      <td>72.99</td>\n",
        "      <td>77.88</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1051,7 +1087,7 @@
        "      <td>1.43%</td>\n",
        "      <td>65.47</td>\n",
        "      <td>69.79</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1094,27 +1130,27 @@
        "4                1.43%                                  65.47   \n",
        "\n",
        "   Tests Per Confirmed Case  Tests per million  \n",
-       "0                     83.33                5.0  \n",
-       "1                     87.50               10.0  \n",
-       "2                     79.26               10.0  \n",
-       "3                     77.88               11.0  \n",
-       "4                     69.79               11.0  "
+       "0                     83.33                  5  \n",
+       "1                     87.50                 10  \n",
+       "2                     79.26                 10  \n",
+       "3                     77.88                 11  \n",
+       "4                     69.79                 11  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# read data\n",
-    "tests = pd.read_csv('https://api.covid19india.org/csv/latest/tested_numbers_icmr_data.csv')\n",
+    "tests_day_wise = pd.read_csv('https://api.covid19india.org/csv/latest/tested_numbers_icmr_data.csv')\n",
     "\n",
     "# save as .csv file\n",
-    "tests.to_csv('tests_latest_state_level.csv', index=False)\n",
+    "tests_day_wise.to_csv('tests_day_wise.csv', index=False)\n",
     "\n",
     "# first few rows\n",
-    "tests.head()"
+    "tests_day_wise.head()"
    ]
   },
   {
@@ -1126,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1290,20 +1326,20 @@
        "[3 rows x 28 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# read data\n",
-    "state_wise_tests = pd.read_csv('https://api.covid19india.org/csv/latest/statewise_tested_numbers_data.csv')\n",
+    "tests_state_wise = pd.read_csv('https://api.covid19india.org/csv/latest/statewise_tested_numbers_data.csv')\n",
     "\n",
     "# save as .csv file\n",
-    "tests.to_csv('tests_latest_state_level.csv', index=False)\n",
+    "tests_state_wise.to_csv('tests_state_wise.csv', index=False)\n",
     "\n",
     "# first few rows\n",
-    "state_wise_tests.head(3)"
+    "tests_state_wise.head(3)"
    ]
   },
   {
