--- a/api.ipynb
+++ b/api.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "4                0               0               0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -494,41 +494,41 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Total</td>\n",
-       "      <td>310156</td>\n",
-       "      <td>154896</td>\n",
-       "      <td>8895</td>\n",
-       "      <td>146342</td>\n",
-       "      <td>13/06/2020 16:33:46</td>\n",
-       "      <td>23</td>\n",
+       "      <td>332823</td>\n",
+       "      <td>169748</td>\n",
+       "      <td>9523</td>\n",
+       "      <td>153512</td>\n",
+       "      <td>15/06/2020 12:24:46</td>\n",
+       "      <td>40</td>\n",
        "      <td>TT</td>\n",
-       "      <td>561</td>\n",
-       "      <td>657</td>\n",
-       "      <td>5</td>\n",
+       "      <td>-189</td>\n",
+       "      <td>65</td>\n",
+       "      <td>3</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Maharashtra</td>\n",
-       "      <td>101141</td>\n",
-       "      <td>47796</td>\n",
-       "      <td>3717</td>\n",
-       "      <td>49628</td>\n",
-       "      <td>12/06/2020 20:44:48</td>\n",
-       "      <td>0</td>\n",
+       "      <td>107958</td>\n",
+       "      <td>50978</td>\n",
+       "      <td>3950</td>\n",
+       "      <td>53017</td>\n",
+       "      <td>14/06/2020 21:54:47</td>\n",
+       "      <td>13</td>\n",
        "      <td>MH</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>13 cases were marked as non-covid deaths in MH...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Tamil Nadu</td>\n",
-       "      <td>40698</td>\n",
-       "      <td>22047</td>\n",
-       "      <td>367</td>\n",
-       "      <td>18284</td>\n",
-       "      <td>12/06/2020 18:45:47</td>\n",
+       "      <td>44661</td>\n",
+       "      <td>24547</td>\n",
+       "      <td>435</td>\n",
+       "      <td>19679</td>\n",
+       "      <td>14/06/2020 19:35:48</td>\n",
        "      <td>0</td>\n",
        "      <td>TN</td>\n",
        "      <td>0</td>\n",
@@ -539,11 +539,11 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Delhi</td>\n",
-       "      <td>36824</td>\n",
-       "      <td>13398</td>\n",
-       "      <td>1214</td>\n",
-       "      <td>22212</td>\n",
-       "      <td>12/06/2020 22:24:48</td>\n",
+       "      <td>41182</td>\n",
+       "      <td>15823</td>\n",
+       "      <td>1327</td>\n",
+       "      <td>24032</td>\n",
+       "      <td>14/06/2020 21:34:47</td>\n",
        "      <td>0</td>\n",
        "      <td>DL</td>\n",
        "      <td>0</td>\n",
@@ -554,11 +554,11 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Gujarat</td>\n",
-       "      <td>22562</td>\n",
-       "      <td>15501</td>\n",
-       "      <td>1416</td>\n",
-       "      <td>5645</td>\n",
-       "      <td>12/06/2020 20:15:59</td>\n",
+       "      <td>23590</td>\n",
+       "      <td>16333</td>\n",
+       "      <td>1478</td>\n",
+       "      <td>5779</td>\n",
+       "      <td>14/06/2020 20:43:48</td>\n",
        "      <td>0</td>\n",
        "      <td>GJ</td>\n",
        "      <td>0</td>\n",
@@ -572,28 +572,28 @@
       ],
       "text/plain": [
        "         State  Confirmed  Recovered  Deaths  Active    Last_Updated_Time  \\\n",
-       "0        Total     310156     154896    8895  146342  13/06/2020 16:33:46   \n",
-       "1  Maharashtra     101141      47796    3717   49628  12/06/2020 20:44:48   \n",
-       "2   Tamil Nadu      40698      22047     367   18284  12/06/2020 18:45:47   \n",
-       "3        Delhi      36824      13398    1214   22212  12/06/2020 22:24:48   \n",
-       "4      Gujarat      22562      15501    1416    5645  12/06/2020 20:15:59   \n",
+       "0        Total     332823     169748    9523  153512  15/06/2020 12:24:46   \n",
+       "1  Maharashtra     107958      50978    3950   53017  14/06/2020 21:54:47   \n",
+       "2   Tamil Nadu      44661      24547     435   19679  14/06/2020 19:35:48   \n",
+       "3        Delhi      41182      15823    1327   24032  14/06/2020 21:34:47   \n",
+       "4      Gujarat      23590      16333    1478    5779  14/06/2020 20:43:48   \n",
        "\n",
        "   Migrated_Other State_code  Delta_Confirmed  Delta_Recovered  Delta_Deaths  \\\n",
-       "0              23         TT              561              657             5   \n",
-       "1               0         MH                0                0             0   \n",
+       "0              40         TT             -189               65             3   \n",
+       "1              13         MH                0                0             0   \n",
        "2               0         TN                0                0             0   \n",
        "3               0         DL                0                0             0   \n",
        "4               0         GJ                0                0             0   \n",
        "\n",
        "                                         State_Notes  \n",
        "0                                                NaN  \n",
-       "1                                                NaN  \n",
+       "1  13 cases were marked as non-covid deaths in MH...  \n",
        "2  2 deaths cross notified to other states from C...  \n",
        "3  Delhi bulletins in the morning, containing dat...  \n",
        "4                                                NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +725,7 @@
        "4                             Bihar  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -822,13 +822,13 @@
        "      <td>State Unassigned</td>\n",
        "      <td>UN_Unassigned</td>\n",
        "      <td>Unassigned</td>\n",
-       "      <td>7955</td>\n",
-       "      <td>7955</td>\n",
+       "      <td>6943</td>\n",
+       "      <td>6943</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-464</td>\n",
+       "      <td>-464</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -903,9 +903,9 @@
        "      <td>22</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -923,18 +923,18 @@
        "4     0         AP               Andhra Pradesh          AP_Foreign Evacuees   \n",
        "\n",
        "                   District  Confirmed  Active  Recovered  Deceased  \\\n",
-       "0                Unassigned       7955    7955          0         0   \n",
+       "0                Unassigned       6943    6943          0         0   \n",
        "1                  Nicobars          0       0          0         0   \n",
        "2  North and Middle Andaman          1       0          1         0   \n",
        "3             South Andaman         32       0         32         0   \n",
        "4          Foreign Evacuees        202     180         22         0   \n",
        "\n",
        "   Migrated_Other  Delta_Confirmed  Delta_Active  Delta_Recovered  \\\n",
-       "0             0.0                0             0                0   \n",
+       "0             0.0             -464          -464                0   \n",
        "1             0.0                0             0                0   \n",
        "2             0.0                0             0                0   \n",
        "3             0.0                0             0                0   \n",
-       "4             0.0                3             2                1   \n",
+       "4             0.0                0             0                0   \n",
        "\n",
        "   Delta_Deceased District_Notes  Last_Updated  \n",
        "0               0            NaN           NaN  \n",
@@ -944,7 +944,7 @@
        "4               0            NaN           NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1023,7 @@
        "      <td>1.20%</td>\n",
        "      <td>75.64</td>\n",
        "      <td>83.33</td>\n",
-       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1039,7 +1039,7 @@
        "      <td>1.14%</td>\n",
        "      <td>81.57</td>\n",
        "      <td>87.50</td>\n",
-       "      <td>10</td>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1055,7 +1055,7 @@
        "      <td>1.26%</td>\n",
        "      <td>73.96</td>\n",
        "      <td>79.26</td>\n",
-       "      <td>10</td>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1071,7 +1071,7 @@
        "      <td>1.28%</td>\n",
        "      <td>72.99</td>\n",
        "      <td>77.88</td>\n",
-       "      <td>11</td>\n",
+       "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1087,7 +1087,7 @@
        "      <td>1.43%</td>\n",
        "      <td>65.47</td>\n",
        "      <td>69.79</td>\n",
-       "      <td>11</td>\n",
+       "      <td>11.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1130,14 +1130,14 @@
        "4                1.43%                                  65.47   \n",
        "\n",
        "   Tests Per Confirmed Case  Tests per million  \n",
-       "0                     83.33                  5  \n",
-       "1                     87.50                 10  \n",
-       "2                     79.26                 10  \n",
-       "3                     77.88                 11  \n",
-       "4                     69.79                 11  "
+       "0                     83.33                5.0  \n",
+       "1                     87.50               10.0  \n",
+       "2                     79.26               10.0  \n",
+       "3                     77.88               11.0  \n",
+       "4                     69.79               11.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,7 @@
        "[3 rows x 28 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
