--- a/api.ipynb
+++ b/api.ipynb
@@ -494,26 +494,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Total</td>\n",
-       "      <td>381537</td>\n",
-       "      <td>205245</td>\n",
-       "      <td>12607</td>\n",
-       "      <td>163639</td>\n",
-       "      <td>19/06/2020 13:46:46</td>\n",
-       "      <td>46</td>\n",
+       "      <td>400566</td>\n",
+       "      <td>216676</td>\n",
+       "      <td>13031</td>\n",
+       "      <td>170809</td>\n",
+       "      <td>20/06/2020 19:25:46</td>\n",
+       "      <td>50</td>\n",
        "      <td>TT</td>\n",
-       "      <td>446</td>\n",
-       "      <td>62</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4732</td>\n",
+       "      <td>2467</td>\n",
+       "      <td>60</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Maharashtra</td>\n",
-       "      <td>120504</td>\n",
-       "      <td>60838</td>\n",
-       "      <td>5751</td>\n",
-       "      <td>53902</td>\n",
-       "      <td>18/06/2020 21:56:54</td>\n",
+       "      <td>124331</td>\n",
+       "      <td>62773</td>\n",
+       "      <td>5893</td>\n",
+       "      <td>55652</td>\n",
+       "      <td>19/06/2020 22:56:49</td>\n",
        "      <td>13</td>\n",
        "      <td>MH</td>\n",
        "      <td>0</td>\n",
@@ -524,26 +524,26 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Tamil Nadu</td>\n",
-       "      <td>52334</td>\n",
-       "      <td>28641</td>\n",
-       "      <td>625</td>\n",
-       "      <td>23068</td>\n",
-       "      <td>18/06/2020 22:26:51</td>\n",
+       "      <td>56845</td>\n",
+       "      <td>31316</td>\n",
+       "      <td>704</td>\n",
+       "      <td>24825</td>\n",
+       "      <td>20/06/2020 18:44:47</td>\n",
        "      <td>0</td>\n",
        "      <td>TN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2396</td>\n",
+       "      <td>1045</td>\n",
+       "      <td>38</td>\n",
        "      <td>2 deaths cross notified to other states from C...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Delhi</td>\n",
-       "      <td>49979</td>\n",
-       "      <td>21341</td>\n",
-       "      <td>1969</td>\n",
-       "      <td>26669</td>\n",
-       "      <td>19/06/2020 00:45:49</td>\n",
+       "      <td>53116</td>\n",
+       "      <td>23569</td>\n",
+       "      <td>2035</td>\n",
+       "      <td>27512</td>\n",
+       "      <td>20/06/2020 00:03:49</td>\n",
        "      <td>0</td>\n",
        "      <td>DL</td>\n",
        "      <td>0</td>\n",
@@ -554,11 +554,11 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Gujarat</td>\n",
-       "      <td>25658</td>\n",
-       "      <td>17827</td>\n",
-       "      <td>1592</td>\n",
-       "      <td>6239</td>\n",
-       "      <td>18/06/2020 22:07:49</td>\n",
+       "      <td>26198</td>\n",
+       "      <td>18167</td>\n",
+       "      <td>1619</td>\n",
+       "      <td>6412</td>\n",
+       "      <td>19/06/2020 21:36:50</td>\n",
        "      <td>0</td>\n",
        "      <td>GJ</td>\n",
        "      <td>0</td>\n",
@@ -572,16 +572,16 @@
       ],
       "text/plain": [
        "         State  Confirmed  Recovered  Deaths  Active    Last_Updated_Time  \\\n",
-       "0        Total     381537     205245   12607  163639  19/06/2020 13:46:46   \n",
-       "1  Maharashtra     120504      60838    5751   53902  18/06/2020 21:56:54   \n",
-       "2   Tamil Nadu      52334      28641     625   23068  18/06/2020 22:26:51   \n",
-       "3        Delhi      49979      21341    1969   26669  19/06/2020 00:45:49   \n",
-       "4      Gujarat      25658      17827    1592    6239  18/06/2020 22:07:49   \n",
+       "0        Total     400566     216676   13031  170809  20/06/2020 19:25:46   \n",
+       "1  Maharashtra     124331      62773    5893   55652  19/06/2020 22:56:49   \n",
+       "2   Tamil Nadu      56845      31316     704   24825  20/06/2020 18:44:47   \n",
+       "3        Delhi      53116      23569    2035   27512  20/06/2020 00:03:49   \n",
+       "4      Gujarat      26198      18167    1619    6412  19/06/2020 21:36:50   \n",
        "\n",
        "   Migrated_Other State_code  Delta_Confirmed  Delta_Recovered  Delta_Deaths  \\\n",
-       "0              46         TT              446               62             1   \n",
+       "0              50         TT             4732             2467            60   \n",
        "1              13         MH                0                0             0   \n",
-       "2               0         TN                0                0             0   \n",
+       "2               0         TN             2396             1045            38   \n",
        "3               0         DL                0                0             0   \n",
        "4               0         GJ                0                0             0   \n",
        "\n",
@@ -822,13 +822,13 @@
        "      <td>State Unassigned</td>\n",
        "      <td>UN_Unassigned</td>\n",
        "      <td>Unassigned</td>\n",
-       "      <td>8898</td>\n",
-       "      <td>8898</td>\n",
+       "      <td>9236</td>\n",
+       "      <td>9236</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>224</td>\n",
-       "      <td>224</td>\n",
+       "      <td>338</td>\n",
+       "      <td>338</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -898,14 +898,14 @@
        "      <td>Andhra Pradesh</td>\n",
        "      <td>AP_Foreign Evacuees</td>\n",
        "      <td>Foreign Evacuees</td>\n",
-       "      <td>287</td>\n",
-       "      <td>241</td>\n",
-       "      <td>46</td>\n",
+       "      <td>326</td>\n",
+       "      <td>277</td>\n",
+       "      <td>49</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -923,18 +923,18 @@
        "4     0         AP               Andhra Pradesh          AP_Foreign Evacuees   \n",
        "\n",
        "                   District  Confirmed  Active  Recovered  Deceased  \\\n",
-       "0                Unassigned       8898    8898          0         0   \n",
+       "0                Unassigned       9236    9236          0         0   \n",
        "1                  Nicobars          0       0          0         0   \n",
        "2  North and Middle Andaman          1       0          1         0   \n",
        "3             South Andaman         35       3         32         0   \n",
-       "4          Foreign Evacuees        287     241         46         0   \n",
+       "4          Foreign Evacuees        326     277         49         0   \n",
        "\n",
        "   Migrated_Other  Delta_Confirmed  Delta_Active  Delta_Recovered  \\\n",
-       "0               0              224           224                0   \n",
+       "0               0              338           338                0   \n",
        "1               0                0             0                0   \n",
        "2               0                0             0                0   \n",
        "3               0                0             0                0   \n",
-       "4               0                0             0                0   \n",
+       "4               0               18            16                2   \n",
        "\n",
        "   Delta_Deceased District_Notes  Last_Updated  \n",
        "0               0            NaN           NaN  \n",
@@ -1197,11 +1197,11 @@
        "      <th>Total People Currently in Quarantine</th>\n",
        "      <th>Tag (People in Quarantine)</th>\n",
        "      <th>...</th>\n",
-       "      <th>Corona Enquiry Calls</th>\n",
        "      <th>Num Calls State Helpline</th>\n",
        "      <th>Source1</th>\n",
        "      <th>Unnamed: 21</th>\n",
        "      <th>Source2</th>\n",
+       "      <th>Unnamed: 23</th>\n",
        "      <th>Test positivity rate</th>\n",
        "      <th>Tests per thousand</th>\n",
        "      <th>Tests per million</th>\n",
@@ -1217,15 +1217,15 @@
        "      <td>1403.0</td>\n",
        "      <td>Samples Sent</td>\n",
        "      <td>12.0</td>\n",
-       "      <td>1210.0</td>\n",
+       "      <td>1210</td>\n",
        "      <td>181.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>https://t.me/indiacovid/2550</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.86%</td>\n",
@@ -1247,9 +1247,9 @@
        "      <td>614.0</td>\n",
        "      <td>Institutional</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>280.0</td>\n",
        "      <td>https://t.me/indiacovid/3147?single</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.01%</td>\n",
@@ -1271,9 +1271,9 @@
        "      <td>724.0</td>\n",
        "      <td>Institutional</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>298.0</td>\n",
        "      <td>https://t.me/indiacovid/3365?single</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.16%</td>\n",
@@ -1284,7 +1284,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 28 columns</p>\n",
+       "<p>3 rows × 29 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1293,37 +1293,32 @@
        "1  24/04/2020  Andaman and Nicobar Islands        2679.0       Samples Sent   \n",
        "2  27/04/2020  Andaman and Nicobar Islands        2848.0       Samples Sent   \n",
        "\n",
-       "   Positive  Negative  Unconfirmed  Cumulative People In Quarantine  \\\n",
-       "0      12.0    1210.0        181.0                              NaN   \n",
-       "1      27.0       NaN        246.0                              NaN   \n",
-       "2      33.0       NaN        106.0                              NaN   \n",
+       "   Positive Negative  Unconfirmed  Cumulative People In Quarantine  \\\n",
+       "0      12.0     1210        181.0                              NaN   \n",
+       "1      27.0      NaN        246.0                              NaN   \n",
+       "2      33.0      NaN        106.0                              NaN   \n",
        "\n",
        "   Total People Currently in Quarantine Tag (People in Quarantine)  ...  \\\n",
        "0                                   NaN                        NaN  ...   \n",
        "1                                 614.0              Institutional  ...   \n",
        "2                                 724.0              Institutional  ...   \n",
        "\n",
-       "   Corona Enquiry Calls  Num Calls State Helpline  \\\n",
-       "0                   NaN                       NaN   \n",
-       "1                   NaN                     280.0   \n",
-       "2                   NaN                     298.0   \n",
+       "   Num Calls State Helpline                              Source1  Unnamed: 21  \\\n",
+       "0                       NaN         https://t.me/indiacovid/2550          NaN   \n",
+       "1                     280.0  https://t.me/indiacovid/3147?single          NaN   \n",
+       "2                     298.0  https://t.me/indiacovid/3365?single          NaN   \n",
        "\n",
-       "                               Source1  Unnamed: 21  Source2  \\\n",
-       "0         https://t.me/indiacovid/2550          NaN      NaN   \n",
-       "1  https://t.me/indiacovid/3147?single          NaN      NaN   \n",
-       "2  https://t.me/indiacovid/3365?single          NaN      NaN   \n",
+       "   Source2  Unnamed: 23  Test positivity rate  Tests per thousand  \\\n",
+       "0      NaN          NaN                 0.86%                3.53   \n",
+       "1      NaN          NaN                 1.01%                6.75   \n",
+       "2      NaN          NaN                 1.16%                7.17   \n",
        "\n",
-       "   Test positivity rate  Tests per thousand  Tests per million  \\\n",
-       "0                 0.86%                3.53             3534.0   \n",
-       "1                 1.01%                6.75             6748.0   \n",
-       "2                 1.16%                7.17             7174.0   \n",
+       "   Tests per million  Tests per positive case  Population NCP 2019 Projection  \n",
+       "0             3534.0                    117.0                        397000.0  \n",
+       "1             6748.0                     99.0                        397000.0  \n",
+       "2             7174.0                     86.0                        397000.0  \n",
        "\n",
-       "   Tests per positive case  Population NCP 2019 Projection  \n",
-       "0                    117.0                        397000.0  \n",
-       "1                     99.0                        397000.0  \n",
-       "2                     86.0                        397000.0  \n",
-       "\n",
-       "[3 rows x 28 columns]"
+       "[3 rows x 29 columns]"
       ]
      },
      "execution_count": 8,
