--- a/api.ipynb
+++ b/api.ipynb
@@ -494,26 +494,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Total</td>\n",
-       "      <td>425667</td>\n",
-       "      <td>237252</td>\n",
-       "      <td>13705</td>\n",
-       "      <td>174659</td>\n",
-       "      <td>22/06/2020 09:53:13</td>\n",
+       "      <td>440852</td>\n",
+       "      <td>248140</td>\n",
+       "      <td>14015</td>\n",
+       "      <td>178646</td>\n",
+       "      <td>23/06/2020 11:06:13</td>\n",
        "      <td>51</td>\n",
        "      <td>TT</td>\n",
-       "      <td>-1225</td>\n",
+       "      <td>402</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Maharashtra</td>\n",
-       "      <td>132075</td>\n",
-       "      <td>65744</td>\n",
-       "      <td>6170</td>\n",
-       "      <td>60147</td>\n",
-       "      <td>21/06/2020 23:04:14</td>\n",
+       "      <td>135796</td>\n",
+       "      <td>67706</td>\n",
+       "      <td>6283</td>\n",
+       "      <td>61793</td>\n",
+       "      <td>22/06/2020 23:26:52</td>\n",
        "      <td>14</td>\n",
        "      <td>MH</td>\n",
        "      <td>0</td>\n",
@@ -524,11 +524,11 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Tamil Nadu</td>\n",
-       "      <td>59377</td>\n",
-       "      <td>32754</td>\n",
-       "      <td>757</td>\n",
-       "      <td>25866</td>\n",
-       "      <td>21/06/2020 18:40:14</td>\n",
+       "      <td>62087</td>\n",
+       "      <td>34112</td>\n",
+       "      <td>794</td>\n",
+       "      <td>27181</td>\n",
+       "      <td>22/06/2020 20:05:18</td>\n",
        "      <td>0</td>\n",
        "      <td>TN</td>\n",
        "      <td>0</td>\n",
@@ -539,11 +539,11 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Delhi</td>\n",
-       "      <td>59746</td>\n",
-       "      <td>33013</td>\n",
-       "      <td>2175</td>\n",
-       "      <td>24558</td>\n",
-       "      <td>21/06/2020 19:45:14</td>\n",
+       "      <td>62655</td>\n",
+       "      <td>36602</td>\n",
+       "      <td>2233</td>\n",
+       "      <td>23820</td>\n",
+       "      <td>22/06/2020 21:59:15</td>\n",
        "      <td>0</td>\n",
        "      <td>DL</td>\n",
        "      <td>0</td>\n",
@@ -554,11 +554,11 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Gujarat</td>\n",
-       "      <td>27317</td>\n",
-       "      <td>19357</td>\n",
-       "      <td>1664</td>\n",
-       "      <td>6296</td>\n",
-       "      <td>21/06/2020 20:25:15</td>\n",
+       "      <td>27880</td>\n",
+       "      <td>19917</td>\n",
+       "      <td>1685</td>\n",
+       "      <td>6278</td>\n",
+       "      <td>22/06/2020 20:37:16</td>\n",
        "      <td>0</td>\n",
        "      <td>GJ</td>\n",
        "      <td>0</td>\n",
@@ -572,14 +572,14 @@
       ],
       "text/plain": [
        "         State  Confirmed  Recovered  Deaths  Active    Last_Updated_Time  \\\n",
-       "0        Total     425667     237252   13705  174659  22/06/2020 09:53:13   \n",
-       "1  Maharashtra     132075      65744    6170   60147  21/06/2020 23:04:14   \n",
-       "2   Tamil Nadu      59377      32754     757   25866  21/06/2020 18:40:14   \n",
-       "3        Delhi      59746      33013    2175   24558  21/06/2020 19:45:14   \n",
-       "4      Gujarat      27317      19357    1664    6296  21/06/2020 20:25:15   \n",
+       "0        Total     440852     248140   14015  178646  23/06/2020 11:06:13   \n",
+       "1  Maharashtra     135796      67706    6283   61793  22/06/2020 23:26:52   \n",
+       "2   Tamil Nadu      62087      34112     794   27181  22/06/2020 20:05:18   \n",
+       "3        Delhi      62655      36602    2233   23820  22/06/2020 21:59:15   \n",
+       "4      Gujarat      27880      19917    1685    6278  22/06/2020 20:37:16   \n",
        "\n",
        "   Migrated_Other State_code  Delta_Confirmed  Delta_Recovered  Delta_Deaths  \\\n",
-       "0              51         TT            -1225                0             1   \n",
+       "0              51         TT              402                3             0   \n",
        "1              14         MH                0                0             0   \n",
        "2               0         TN                0                0             0   \n",
        "3               0         DL                0                0             0   \n",
@@ -822,13 +822,13 @@
        "      <td>State Unassigned</td>\n",
        "      <td>UN_Unassigned</td>\n",
        "      <td>Unassigned</td>\n",
-       "      <td>7803</td>\n",
-       "      <td>7803</td>\n",
+       "      <td>7986</td>\n",
+       "      <td>7986</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>-1295</td>\n",
-       "      <td>-1295</td>\n",
+       "      <td>183</td>\n",
+       "      <td>183</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -898,8 +898,8 @@
        "      <td>Andhra Pradesh</td>\n",
        "      <td>AP_Foreign Evacuees</td>\n",
        "      <td>Foreign Evacuees</td>\n",
-       "      <td>330</td>\n",
-       "      <td>278</td>\n",
+       "      <td>337</td>\n",
+       "      <td>285</td>\n",
        "      <td>52</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -923,14 +923,14 @@
        "4     0         AP               Andhra Pradesh          AP_Foreign Evacuees   \n",
        "\n",
        "                   District  Confirmed  Active  Recovered  Deceased  \\\n",
-       "0                Unassigned       7803    7803          0         0   \n",
+       "0                Unassigned       7986    7986          0         0   \n",
        "1                  Nicobars          0       0          0         0   \n",
        "2  North and Middle Andaman          1       0          1         0   \n",
        "3             South Andaman         35       3         32         0   \n",
-       "4          Foreign Evacuees        330     278         52         0   \n",
+       "4          Foreign Evacuees        337     285         52         0   \n",
        "\n",
        "   Migrated_Other  Delta_Confirmed  Delta_Active  Delta_Recovered  \\\n",
-       "0               0            -1295         -1295                0   \n",
+       "0               0              183           183                0   \n",
        "1               0                0             0                0   \n",
        "2               0                0             0                0   \n",
        "3               0                0             0                0   \n",
@@ -1001,7 +1001,7 @@
        "      <th>Sample Reported today</th>\n",
        "      <th>Positive cases from samples reported</th>\n",
        "      <th>Source</th>\n",
-       "      <th>Unnamed: 8</th>\n",
+       "      <th>Source 1</th>\n",
        "      <th>Test positivity rate</th>\n",
        "      <th>Individuals Tested Per Confirmed Case</th>\n",
        "      <th>Tests Per Confirmed Case</th>\n",
@@ -1115,26 +1115,26 @@
        "3                                   NaN   \n",
        "4                                   NaN   \n",
        "\n",
-       "                                        Source Unnamed: 8  \\\n",
-       "0           Press_Release_ICMR_13March2020.pdf        NaN   \n",
-       "1      ICMR_website_update_18March_6PM_IST.pdf        NaN   \n",
-       "2  ICMR_website_update_19March_10AM_IST_V2.pdf        NaN   \n",
-       "3      ICMR_website_update_19March_6PM_IST.pdf        NaN   \n",
-       "4     ICMR_website_update_20March_10AM_IST.pdf        NaN   \n",
+       "                                        Source Source 1 Test positivity rate  \\\n",
+       "0           Press_Release_ICMR_13March2020.pdf      NaN                1.20%   \n",
+       "1      ICMR_website_update_18March_6PM_IST.pdf      NaN                1.14%   \n",
+       "2  ICMR_website_update_19March_10AM_IST_V2.pdf      NaN                1.26%   \n",
+       "3      ICMR_website_update_19March_6PM_IST.pdf      NaN                1.28%   \n",
+       "4     ICMR_website_update_20March_10AM_IST.pdf      NaN                1.43%   \n",
        "\n",
-       "  Test positivity rate  Individuals Tested Per Confirmed Case  \\\n",
-       "0                1.20%                                  75.64   \n",
-       "1                1.14%                                  81.57   \n",
-       "2                1.26%                                  73.96   \n",
-       "3                1.28%                                  72.99   \n",
-       "4                1.43%                                  65.47   \n",
+       "   Individuals Tested Per Confirmed Case  Tests Per Confirmed Case  \\\n",
+       "0                                  75.64                     83.33   \n",
+       "1                                  81.57                     87.50   \n",
+       "2                                  73.96                     79.26   \n",
+       "3                                  72.99                     77.88   \n",
+       "4                                  65.47                     69.79   \n",
        "\n",
-       "   Tests Per Confirmed Case  Tests per million  \n",
-       "0                     83.33                5.0  \n",
-       "1                     87.50               10.0  \n",
-       "2                     79.26               10.0  \n",
-       "3                     77.88               11.0  \n",
-       "4                     69.79               11.0  "
+       "   Tests per million  \n",
+       "0                5.0  \n",
+       "1               10.0  \n",
+       "2               10.0  \n",
+       "3               11.0  \n",
+       "4               11.0  "
       ]
      },
      "execution_count": 7,
